--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=GETI_ESTAG-MIC\\SQLEXPRESS; Database=Emprestimos; Integrated Security=SSPI; TrustServerCertificate=True"
+       // "DefaultConnection": "server=GETI_ESTAG-MIC\\SQLEXPRESS; Database=Sistema; Integrated Security=SSPI; TrustServerCertificate=True"
+    "casa": "server=LEO\\SQLEXPRESS; Database=SistemaCasa; Integrated Security=SSPI; TrustServerCertificate=True"
+
+
+
+
   }
 }
