--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "server=GETI_ESTAG-MIC\\SQLEXPRESS; Database=Sistema; Integrated Security=SSPI; TrustServerCertificate=True"
-    //"casa": "server=GETI_ESTAG-MIC\\SQLEXPRESS; Database=SistemaCasa; Integrated Security=SSPI; TrustServerCertificate=True"
+    //"casa": "server=LEO\\SQLEXPRESS; Database=SistemaCasa; Integrated Security=SSPI; TrustServerCertificate=True"
 
 
 
